--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.17/esri/themes/light/main.css">
 </head>
 <body class="left-sidebar is-preload">
   <div id="page-wrapper">
     <app-root></app-root>
-  </div>
-  <script src="./assets/js/jquery.min.js"></script>
-  <script src="./assets/js/jquery.dropotron.min.js"></script>
-  <script src="./assets/js/jquery.scrolly.min.js"></script>
-  <script src="./assets/js/jquery.scrollex.min.js"></script>
-  <script src="./assets/js/browser.min.js"></script>
-  <script src="./assets/js/breakpoints.min.js"></script>
-  <script src="./assets/js/util.js"></script>
-  <script src="./assets/js/main.js"></script>
+  </div>  
 </body>
-</html>
+<script src="https://js.arcgis.com/4.17/"></script>     
+</html>   
