--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Tsm San Roque</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://js.arcgis.com/4.17/esri/themes/light/main.css">
 </head>
@@ -12,6 +13,5 @@
   <div id="page-wrapper">
     <app-root></app-root>
   </div>  
-</body>
-<script src="https://js.arcgis.com/4.17/"></script>     
+</body>     
 </html>   
